@@ -28,6 +28,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Add missing parameters when PUTing tasks (Bug #10545).
 * [mjr] Fix removeUserData implementation.
 * [gwr] Fix Kolab object attribute handling for tasks.
 * [gwr] Avoid including the owner name into the default share.
@@ -1053,6 +1054,7 @@
    <date>2011-09-19</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Add missing parameters when PUTing tasks (Bug #10545).
 * [mjr] Fix removeUserData implementation.
 * [gwr] Fix Kolab object attribute handling for tasks.
 * [gwr] Avoid including the owner name into the default share.
